--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-  "mainServer": "673530470369198093",
-  "devs": ["319075267928784897"]
+  "mainServer": "your_main_server_id",
+  "devs": ["your_discord_user_ids"]
 }
